fix deprecated newInstance() method.